# brave-chat-server

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  SECURITY.md  app.json  deta.json  docker-compose.yml  haproxy.cfg  heroku-compose.yml  heroku.Dockerfile  heroku.yml  main.py  netlify.toml  package.json  prometheus.yml  pyproject.toml  requirements.txt  run.sh  tox.ini  vercel.json
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: codacy.yml  codeql.yml  greetings.yml  makefile.yml  ossar.yml  stale.yml
app/: __init__.py  __main__.py  config.py  main.py
app/auth/: crud.py  model.py  models.py  router.py  schemas.py
app/chats/: crud.py  model.py  models.py  router.py  schemas.py
app/contacts/: crud.py  model.py  router.py  schemas.py
app/rooms/: crud.py  models.py  router.py  schemas.py
app/users/: crud.py  model.py  models.py  router.py  schemas.py
app/utils/: constants.py  crypt_util.py  db_utils.py  dependencies.py  engine.py  full_text_search.py  jwt_util.py  mixins.py  pub_sub_handlers.py  session.py
app/web_sockets/: router.py
netlify/functions/: run_command.js
tests/: conftest.py  test_app.py  test_version.py
tests/tests_auth/: test_login.py  test_register.py
tests/tests_contacts/: test_add_contact.py  test_get_contact_list.py
tests/tests_users/: test_update_profile_information.py  test_user_get_profile.py  test_user_logout.py  test_user_update_status.py
