[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["wiseaidev <business@wiseai.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi = {extras = ["uvicorn"], version = "^0.81.0"}
PyJWT = "^2.4.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
python-multipart = "^0.0.5"
deta = "^1.1.0"
pydantic = {extras = ["email"], version = "^1.9.2"}
databases = {extras = ["aiomysql"], version = "^0.6.1"}
SQLAlchemy = "^1.4.41"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "app.main:serve"

[tool.black]
line-length = 79