[tool.poetry]
name = "chat-app-backend"
version = "0.1.0"
description = "A fully async based backend for the chat application built using FastAPI, SingleStore, Pydantic, SQLAlchemy, and Deta."
authors = ["wiseaidev <business@wiseai.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wiseaidev/fastapi-singlestore-backend"
homepage = "https://github.com/wiseaidev/fastapi-singlestore-backend"
documentation = ""
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
keywords = ["python", "fastapi", "singlestore", "aiomysql", "SQLAlchemy", "Deta", "chat app"]
packages = [
    { include = "app", from = "." },
]
include = [
    "LICENSE",
    "README.md",
]

[tool.poetry.dependencies]
python = "^3.9.10"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi = {extras = ["uvicorn"], version = "^0.81.0"}
PyJWT = "^2.4.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
python-multipart = "^0.0.5"
deta = "^1.1.0"
pydantic = {extras = ["email"], version = "^1.9.2"}
SQLAlchemy = "==1.4.41"
aiomysql = "^0.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^6.1.0"
flake8 = "^5.0.4"
coverage = "^6.5.0"
mypy = "^0.982"
pytest-cov = "^4.0.0"
tox = "^3.26.0"
isort = "^5.10.1"
black = "^22.10.0"
pre-commit = "^2.20.0"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "app.main:serve"

[tool.black]
line-length = 79
